2016-07-13  Ola Jeppsson  <ola@adapteva.com>

	* src/epiphany-hal-data-local.h (e_chip_db_t): Move here from
	epiphany-hal.c
	(E_CHIP_DB_NUM_CHIP_VERSIONS): Move define here from
	epiphany-hal.c. Add E_ prefix.
	(e_chip_params_table): Add declaration.
	* src/epiphany-hal.c (e_chip_db_t): Move to
	epiphany-hal-data-local.h
	(CHIP_DB_NUM_CHIP_VERSIONS): Move to epiphany-hal-data-local.h.
	(chip_params_table): Rename to ...
	(e_chip_params_table): ... this.
	(ee_set_chip_params): Change from chip_params_table to
	e_chip_params_table. Change from CHIP_DB_NUM_CHIP_VERSIONS to
	E_CHIP_DB_NUM_CHIP_VERSIONS.
	* src/esim-target.c (ee_populate_platform_esim): Change from
	chip_params_table to e_chip_params_table.

2016-06-15  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Check for ESIM and PAL headers and libraries
	before enabling the targets in the e-hal build.

2016-06-13  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/esim-target.c (ee_esim_target_p): Rename from
	esim_target_p.
	* e-hal/src/esim-target.h: Adjust function prototype for
	ee_esim_target_p
	* e-hal/src/e-loader.c (ee_process_elf): Adjust for name
	change to ee_esim_target_p.
	* e-hal/src/epiphany-hal.c (e_init): Ditto.
	(e_finalize): Ditto.
	(e_open): Ditto.
	(e_close): Ditto.
	(ee_read_reg): Ditto.
	(e_alloc): Ditto.
	(e_free): Ditto.
	(ee_reset_core): Ditto.
	(e_reset_group): Ditto.
	* e-hal/src/epiphany-shm-manager.c (e_shm_init): Ditto.
	(e_shm_finalize): Ditto.

2016-06-06  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_init): Don't call e_shm_init().
	* e-hal/src/epiphany-shm-manager.c (e_shm_get_shmtable): Merge
	shm_lock_file() and e_shm_get_shmtable() into one function.
	Call e_shm_init() if needed.
	(e_shm_put_shmtable): Rename from shm_unlock_file().
	* e-utils/src/e-clear-shmtable.c (main): Call
	e_shm_put_shmtable() to release table.

2016-05-10  Ola Jeppsson  <ola@adapteva.com>

	* e-lib/include/e_lib.h: Change search order for e-lib header